language/src/test/programs/ok/proposal/tail.rngl
# [2,3]
fn main():
    ret tail([1,2,3])

fn tail(lst):
    if lst matches [a.tail]:
        ret tail
    ret []