language/src/test/programs/error/parser/elif_after_else.rngl
fn main():
    if 1 == 1:
        ret 1
    else:
        ret 2
    elif 2 == 3:
        ret 3